@@ -1,3 +1,9 @@
+2000-08-29  Eric Melski  <ericm@ajubasolutions.com>
+
+	* library/tkfbox.tcl (::tk::dialog::file::Update): Corrected
+	handling of multi-pattern filters (eg, "* *.*"), which was broken
+	by the getOpenFile performance patches applied earlier.
+
 2000-08-24  Eric Melski  <ericm@ajubasolutions.com>
 
 	* doc/toplevel.n: 
